--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.aware.plugin.template">
+    package="com.aware.plugin.sarsenbayeva">
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/Theme.Aware">
 
-        <service android:name="com.aware.plugin.template.Plugin" android:exported="true" />
-        <activity android:name="com.aware.plugin.template.Settings" android:exported="true" android:theme="@style/Theme.Aware" />
+        <service android:name="com.aware.plugin.sarsenbayeva.Plugin" android:exported="true" />
+        <activity android:name="com.aware.plugin.sarsenbayeva.Settings" android:exported="true" android:theme="@style/Theme.Aware" />
 
+        <provider
+            android:authorities="com.aware.plugin.sarsenbayeva.provider"
+            android:name="com.aware.plugin.sarsenbayeva.Provider"
+            android:exported="true"
+            android:readPermission="com.aware.READ_CONTEXT_DATA"
+            android:writePermission="com.aware.WRITE_CONTEXT_DATA"/>
     </application>
 
 </manifest>
